integration_tests/codegen_fail/fail/union/trait_with_attr_on_method.stderr
error: GraphQL union cannot use #[graphql_union(with = ...)] attribute on a trait method
 --> $DIR/trait_with_attr_on_method.rs:5:21
  |
5 |     #[graphql_union(with = something)]
  |                     ^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
  = note: instead use #[graphql_union(ignore)] on the method with #[graphql_union(on ... = ...)] on the trait itself
